--- a/FastCampus_Sample_CS/CheckPoint01/CheckPoint01.csproj
+++ b/FastCampus_Sample_CS/CheckPoint01/CheckPoint01.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{58519367-66BA-47EC-B08F-80FF85C6E41C}</ProjectGuid>
+    <ProjectGuid>{D9265339-6FB1-4AE2-96AF-6FDB4D1E12B7}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_055_Check</RootNamespace>
-    <AssemblyName>055_Check</AssemblyName>
+    <RootNamespace>CheckPoint01</RootNamespace>
+    <AssemblyName>CheckPoint01</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
