--- a/FastCampus_Sample_CS/105_dynamic/105_dynamic.csproj
+++ b/FastCampus_Sample_CS/105_dynamic/105_dynamic.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{67AE5F21-4410-4276-807B-4CB0E11ED6CA}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>_105_dynamic</RootNamespace>
-    <AssemblyName>_105_dynamic</AssemblyName>
+    <AssemblyName>105_dynamic</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
