--- a/FastCampus_Sample_CS/106_where/106_where.csproj
+++ b/FastCampus_Sample_CS/106_where/106_where.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{38C922C1-BDCB-4711-A308-199B0A5BA181}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>_106_where</RootNamespace>
-    <AssemblyName>_106_where</AssemblyName>
+    <AssemblyName>106_where</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
