--- a/FastCampus_Sample_CS/111_try_catch/111_try_catch.csproj
+++ b/FastCampus_Sample_CS/111_try_catch/111_try_catch.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0D4CFD67-F1BE-422B-AE9A-1236D3D7A664}</ProjectGuid>
+    <ProjectGuid>{078BB25E-D3FE-4762-A83F-956E8EF4F880}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_107_List</RootNamespace>
-    <AssemblyName>107_List</AssemblyName>
+    <RootNamespace>_111_try_catch</RootNamespace>
+    <AssemblyName>111_try_catch</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
